--- a/src/main/webapp/assets/css/Single-playlist.css
+++ b/src/main/webapp/assets/css/Single-playlist.css
@@ -114,7 +114,13 @@ body{
     animation: fade 1s ease-in-out infinite alternate;
 }
 
-
+#favourites{
+	font-size: 1em;
+    font-weight: bold;
+    text-decoration: none;
+    cursor: pointer;
+    color : white;
+}
 
 
 /* --------Right Nav-------- */
@@ -125,6 +131,97 @@ body{
     margin-left: 8rem;
     justify-content: space-evenly;
     align-items: center;
+}
+.right-nav .login{
+    display: flex;
+    align-items: center;
+    margin-left: 4rem;
+    gap: 20px;
+    letter-spacing: 2px;
+    font-family: "Sansita Swashed", sans-serif;
+    cursor: pointer; 
+}
+
+.right-nav .login img{
+    width: 30px;
+    cursor: pointer;
+}
+
+.right-nav .login img, h4:hover{
+    animation: fade 1s ease-in-out infinite alternate;
+}
+
+.afterlogin {
+    display: flex;
+    align-items: center;
+    
+}
+
+.afterlogin .profile img{
+    width: 30px;
+    cursor: pointer;
+}
+
+.profile{
+    display: flex;
+    align-items: center;
+    margin-left: 4rem;
+    gap: 2px;
+    letter-spacing: 2px;
+    font-family: "Sansita Swashed", sans-serif;
+    cursor: pointer; 
+    text-align: left;
+}
+
+h4.Welcome{
+	display: flex;
+    align-items: center;
+    margin-left: 4rem;
+    gap: 2px;
+    letter-spacing: 2px;
+    font-family: "Sansita Swashed", sans-serif;
+    cursor: pointer; 
+    text-align: left;
+    margin-left: 0;
+}
+
+.logout,
+.change-password{
+	display: none;
+	text-decoration: none;
+}
+
+.profile .img-logout{
+	display: none;
+}
+
+.profile-picture img {
+    transition: transform 0.4s;
+}
+
+.profile-picture{
+	align-items: flex-start;
+	position: relative;
+	flex-direction: column;
+    align-items: center;
+    margin-right:30px;
+    margin-left:30px;
+}
+
+.profile-picture:hover + .profile .img-welcome,
+.profile-picture:hover + .profile h4.Welcome {
+    display: none;
+}
+
+.profile-picture:hover + .profile .img-logout,
+.profile-picture:hover + .profile h4 a.logout,
+.profile-picture:hover + .profile h4 a.change-password {
+    display: flex;
+}
+
+
+.profile-picture:hover img {
+    transform: scale(0.7);
 }
 
 
@@ -686,7 +783,6 @@ main {
 
 
 /* ------------ASIDE SECTION-2------------- */
-
 .section-heading {
     margin-top: 1rem;
 	position: relative;
@@ -715,7 +811,7 @@ main {
 }
 
 .list {
-	height: 35vh;
+	height: 80vh;
 	overflow: scroll;
 }
 
@@ -1150,3 +1246,299 @@ footer {
 		display: none;
 	}
 }
+
+
+/* -----Play-Bars----- */
+
+#play-bar{
+    height: 0;
+    width: 0;
+    position: fixed;
+    bottom: 0;
+    overflow: hidden;
+    transition: all 1s ease-in-out;
+}
+
+/* <--#1E1E1E --> */
+#play-bar:target{
+    height: auto;
+    width: 90%;
+    bottom: 0;
+    border-top: 3px solid red;
+    box-shadow: 0px 4px 8px 1px transparent;
+    backdrop-filter: blur(1rem);
+    border-radius: 10px 10px 0 0; 
+    z-index: 10;
+}
+
+/* ---PlayBar Content--- */
+
+.play-bar-content{
+    /* border: 2px solid black; */
+    /* height: vh; */
+    width: 95%;
+    margin: 0 auto;
+    display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-content: center;
+	flex-wrap: nowrap;
+    box-sizing: border-box;
+}
+
+.active-song-description {
+	/* border:1px solid white; */
+	height: 90%;
+	width: 25%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+}
+
+#song-image {
+	width: 60px;
+	min-width: 50px;
+}
+
+#song-image img {
+    border-radius: 10px;
+    margin-top: 12px;
+	width: 100%;
+}
+
+
+.heart-and-ban-icon {
+    height: 100%;
+	padding-top: 4%;
+    cursor: pointer;
+}
+
+.song-desc {
+    margin-right: 1%;
+	margin-left: 1%;
+}
+
+.song-desc div:nth-child(1) {
+    font-size: 14px;
+}
+
+.song-desc div:nth-child(2) {
+    font-size: 12px;
+}
+
+.player {
+    width: 45%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	flex-wrap: nowrap;
+}
+
+.controls {
+    width: 40%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+	font-size: 20px;
+    gap: 15%;
+    cursor: pointer;
+}
+
+#slider {
+    width: 100%;
+	font-size: 12px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	align-items: center;
+	justify-content: center;
+	margin-top: 5px;
+}
+
+.slidecontainer {
+    width: 100%;
+}
+
+.slider {
+    width: 100%;
+	height: 5px;
+	background: #d3d3d3;
+	outline: none;
+	opacity: 0.5;
+	-webkit-transition: 0.2s;
+	transition: opacity 0.2s;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+	appearance: none;
+	width: 17px;
+	height: 17px;
+	border-radius: 50%;
+	background: #007bff;
+	cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+	height: 25px;
+	background: #4caf50;
+	cursor: pointer;
+}
+
+.extras {
+    width: 20%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+    cursor: pointer;
+}
+
+@media only screen and (max-width: 950px) {
+    .fa-heart{
+        display: none;
+    }
+    
+    .fa-list-ul{
+        display: none;
+    }
+    
+    .fa-laptop{
+        display: none;
+    }
+    
+    .fa-expand-alt{
+        display: none;
+    }
+    
+    .controls{
+        gap: 10%;
+    }
+
+    .fa-volume-up{
+        font-size: 1.5vh;
+        margin-top: 10px;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    #song-image img {
+        display: none;
+    }
+    .song-desc{
+        margin-left: -3rem;
+    }
+    .player{
+        width: 50%;
+    }
+}
+
+
+/* Css audio */
+/* Xóa nền cho thẻ audio */
+#audio-player {
+	width:120%;
+    background: transparent;
+    border: none;
+}
+
+/* Chỉnh kiểu cho các nút */
+#audio-player::-webkit-media-controls {
+    background-color: transparent;
+    display: flex;
+    gap: 30px;
+}
+
+#audio-player::-webkit-media-controls-enclosure {
+    background-color: transparent;
+}
+
+/* Đổi màu nút điều khiển thành trắng */
+#audio-player::-webkit-media-controls-panel {
+    background-color: transparent;
+    color: white;
+}
+
+/* Đổi màu thanh tải nhạc thành trắng */
+#audio-player::-webkit-media-controls-current-time-display,
+#audio-player::-webkit-media-controls-time-remaining-display {
+    color: white;
+}
+
+/* Thay đổi màu cho các nút khác (play, mute, fullscreen...) */
+#audio-player::-webkit-media-controls-play-button,
+#audio-player::-webkit-media-controls-mute-button,
+#audio-player::-webkit-media-controls-fullscreen-button {
+    filter: brightness(0) invert(1);
+}
+
+/* Thêm khoảng cách giữa các nút điều khiển */
+#audio-player::-webkit-media-controls button {
+    margin-right: 10px;
+}
+
+#play-bar button {
+    background: none;
+    border: 0;
+    box-sizing: border-box;
+    color: transparent;
+    cursor: pointer;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 18px;
+    right: -3.2rem;
+    letter-spacing: 1px;
+    line-height: 15px;
+    outline: none;
+    overflow: hidden;
+    padding: 4px 0 0;
+    position: absolute;
+    text-transform: uppercase;
+    top: 0.5rem;
+    transform: translate(-50%, -50%);
+    transition: all 0.2s ease-in;
+    width: 100px;
+}
+  
+#play-bar button::before,
+#play-bar button::after {
+    background-color: white;
+    content: '';
+    display: block;
+    height: 3px;
+    left: 0;
+    position: absolute;
+    /* transform-origin: center left; */
+    transition: all 0.2s ease-in;
+    width: 141.4214px;
+    z-index: -1;
+}
+  
+#play-bar button::before {
+    top: 0;
+    transform: rotate(45deg);
+}
+  
+#play-bar button::after {
+    bottom: 0;
+    transform: rotate(-45deg);
+}
+  
+#play-bar button:hover {
+    color: #8A2387;
+}
+  
+button:hover::before,
+button:hover::after {
+    height: 50px;
+    transform: rotate(0deg);
+}
+
+
