--- a/src/main/webapp/assets/css/Single-playlist.css
+++ b/src/main/webapp/assets/css/Single-playlist.css
@@ -1541,4 +1541,78 @@ button:hover::after {
     transform: rotate(0deg);
 }
 
+/* CSS cho nền mờ khi hiển thị modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.6);
+}
 
+/* CSS cho nội dung modal */
+.modal-content {
+    background-color: white;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40%;
+    margin-top:15%;
+    border-radius: 8px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+/* CSS cho nút đóng */
+.close {
+    color: black;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+/* CSS cho nút đóng khi hover */
+.close:hover,
+.close:focus {
+    color: red;
+}
+
+/* CSS cho các nhãn và ô input */
+.modal-content h2 {
+    text-align: center;
+    color: #333;
+}
+
+.modal-content label {
+    color: #333;
+    display: block;
+    margin: 10px 0 5px;
+    font-weight: bold;
+}
+
+.modal-content input[type="text"] {
+    width: 100%;
+    padding: 8px;
+    margin: 5px 0 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.modal-content button[type="submit"] {
+    background-color: #4CAF50; 
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.modal-content button[type="submit"]:hover {
+    background-color: #45a049;
+}
